<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ahrambackground"
    tools:context=".SearchForOrderActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orderNumber"
            android:hint="@string/order_number"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"/>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="#ff0000"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:id="@+id/submit"/>

</RelativeLayout>