<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abdelsattar.alahramapp.PrintPdf">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/lbl_recipeandprient"
        android:textSize="22sp"

        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView2"
        android:text="@string/lbl_recipeandprientcontinue"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#FFF"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="41dp"
        android:background="#f21a1a"
        android:text="@string/btn_print"
        android:textSize="30sp" />

    <Button
        android:id="@+id/nextbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="#113353"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#FFF"
        android:text="التالي" />

</RelativeLayout>
