<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
android:orientation="horizontal"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.95"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textColor="#113353"
            android:text="@string/lbl_ordernumber"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_ordernuber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toLeftOf="@+id/textView3"
            android:layout_toStartOf="@+id/textView3"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:text="77888555" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#113353"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView3"
            android:text="@string/lbl_clientName"
            android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_clientname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"

                android:layout_toLeftOf="@+id/textView5"
                android:text="@string/lbl_clientName"
                android:textSize="18sp"
                />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="#113353"

            android:layout_below="@+id/textView5"
            android:text="@string/lbl_clientphone"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView7"
            android:layout_toLeftOf="@+id/textView7"
            android:layout_toStartOf="@+id/textView7"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:text="01281609575" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView7"
            android:textColor="#113353"

            android:text="تاريخ الطلب:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView10"
            android:layout_toLeftOf="@+id/textView10"
            android:layout_toStartOf="@+id/textView10"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:text="20/5/2017" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="3dp"
                android:textColor="@android:color/holo_red_dark"

                />
    </RelativeLayout>
        <View
            android:id="@+id/myline"
            android:layout_width="20dp"
            android:layout_weight="0.05"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent"
            android:background="#113353" />
    </LinearLayout>
</android.support.v7.widget.CardView>